# SensiNerveX_anomaly

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  README.md  SensiNerveX_Anomaly.ioc  log_f.txt
Core/Inc/: ae_model.h  debug_uart.h  dma.h  features.h  imu.h  main.h  sdio.h  sdio_diskio.h  snx_config.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  storage.h  supervisor.h
Core/Src/: ae_model.c  debug_uart.c  dma.c  features.c  gpio.c  i2c.c  imu.c  main.c  sdio.c  sdio_diskio.c  stm32f4xx_it.c  storage.c  supervisor.c  syscalls.c  tim.c
Linker/: STM32F405RGT6_FLASH.ld
Middlewares/FatFs/: fatfs.c  fatfs.h
Middlewares/FatFs/src/: ffconf.h
Output/: 17_4:15.txt  ANOMLOG.CSV  CALIB.CSV  EVAL.csv  LATENT.CSV  Log.txt  PROFILE.CSV  RAWIMU.CSV  RUNSTAT.CSV  TRAIN.CSV  log_V3.2.txt
Output/27/: ANOMLOG.CSV  CALIB.CSV  EVAL.CSV  LATENT.CSV  PROFILE.CSV  RAWIMU.CSV  TRAIN.CSV
builf/: Makefile  cmake_install.cmake
